# docs/swagger.json
@@ -224,6 +224,45 @@
                 }
             }
         },
+        "/customer/{id}": {
+            "patch": {
+                "description": "Update customer password by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth Customer"
+                ],
+                "summary": "Update Customer Password.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Customer id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "the body to update customer password",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ChangePasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/order": {
             "get": {
                 "description": "Get a list of Order.",
@@ -790,21 +829,71 @@
                     }
                 }
             }
+        },
+        "/seller/{id}": {
+            "patch": {
+                "description": "Update seller password by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth Seller"
+                ],
+                "summary": "Update Seller Password.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Seller id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "the body to update seller password",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ChangePasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "controllers.ChangePasswordInput": {
+            "type": "object",
+            "required": [
+                "new_password",
+                "new_password_confirm"
+            ],
+            "properties": {
+                "new_password": {
+                    "type": "string"
+                },
+                "new_password_confirm": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.LoginInput": {
             "type": "object",
             "required": [
                 "password",
-                "role",
                 "username"
             ],
             "properties": {
                 "password": {
-                    "type": "string"
-                },
-                "role": {
                     "type": "string"
                 },
                 "username": {
@@ -817,7 +906,6 @@
             "required": [
                 "email",
                 "password",
-                "role",
                 "username"
             ],
             "properties": {
@@ -825,9 +913,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                },
-                "role": {
                     "type": "string"
                 },
                 "username": {
